bases/dev/system/rancher/rancher_istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rancher
  namespace: istio-namespace1
spec:
  hosts:
  - rancher.byeon.ca
  gateways:
  - istio-namespace1/pub-lb
  http:
  - name: "rancher"
    route:
    - destination:
        port:
          number: 80
        host: rancher.cattle-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rancher
  namespace: istio-namespace1
spec:
  host: rancher.cattle-system.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
